--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -104,6 +104,7 @@
     "concepts": "cpp",
     "optional": "cpp",
     "string_view": "cpp",
-    "numbers": "cpp"
+    "numbers": "cpp",
+    "chrono": "cpp"
   }
 }
